--- a/src/style.css
+++ b/src/style.css
@@ -1,43 +1,3 @@
-* {
-    background-color: black;
-    display: flex;
-    flex-direction: column;
-}
-
 #canvas {
-    background-color: grey;
-}
-
-#control-box {
-    width: 400px;
-    height: 150px;
-    background-color: brown;
-    display: flex;
-    flex-direction: row;
-}
-
-#left,
-#right {
-    width: 200px;
-    height: 150px;
-}
-
-#left {
-    background-color: aquamarine;
-    display: flex;
-    flex-direction: row;
-}
-
-#right {
-    background-color: orangered;
-}
-
-.placeholder {
-    width: 50px;
-    height: 50px;
-    outline: 1px solid red;
-}
-
-p {
-    color: white;
+    background-color: lightgray;
 }
