--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,19 @@
 #canvas {
-    background-color: lightgray;
+    background-color: lightblue;
+}
+
+#control-holder {
+    width: 150px;
+    height: 150px;
+    display: flex;
+}
+
+.empty-block {
+    width: 50px;
+    height: 50px;
+}
+
+p {
+    margin: 0;
+    font-size: x-small;
 }
