--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
+body {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: gray;
+}
+
 #canvas {
     background-color: lightblue;
 }
